added the first blog

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Ever Github Repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ipsam accusantium sit reiciendis. Voluptatibus labore voluptate praesentium illo officiis. Expedita quis ad facere culpa est. Corrupti perspiciatis nobis vitae. Perspiciatis?</p>
+    </div>
 </body>
 </html>
