--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 </head>
 <body>
     <div>
-        <h3>My first website</h3>
+        <h3>My first blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ipsam accusantium sit reiciendis. Voluptatibus labore voluptate praesentium illo officiis. Expedita quis ad facere culpa est. Corrupti perspiciatis nobis vitae. Perspiciatis?</p>
+    </div>
+    <div>
+        <h3>My second blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ipsam accusantium sit reiciendis. Voluptatibus labore voluptate praesentium illo officiis. Expedita quis ad facere culpa est. Corrupti perspiciatis nobis vitae. Perspiciatis?</p>
+    </div>
+    <div>
+        <h3>My third blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ipsam accusantium sit reiciendis. Voluptatibus labore voluptate praesentium illo officiis. Expedita quis ad facere culpa est. Corrupti perspiciatis nobis vitae. Perspiciatis?</p>
     </div>
 </body>
